# embassy

embassy-net-adin1110/: Cargo.toml
embassy-net-adin1110/src/: crc32.rs  crc8.rs  lib.rs  mdio.rs  phy.rs  regs.rs
examples/nrf52840/: Cargo.toml
examples/stm32l4/: Cargo.toml
shulltronics-examples/nrf52840/: Cargo.toml
shulltronics-examples/rp/: Cargo.toml
